--- a/workspaces/mamonde_main/css/style.scss
+++ b/workspaces/mamonde_main/css/style.scss
@@ -1,4 +1,9 @@
 @charset 'utf-8';
+@import url(fonts.css);
+
+/* html {font-size: 0.625rem;}
+body {font-size: 1.4rem; color: #333;}
+ */
 /* common */
 #wrap {
     color: #000;
@@ -14,8 +19,8 @@
         height: 100%;
         object-fit: cover;
     }
+    .layout__header {
+        background: pink;
+    }
 
-}
-.layout__header {
-    background: pink;
 }
