--- a/workspaces/mamonde_main/css/style.scss
+++ b/workspaces/mamonde_main/css/style.scss
@@ -1,9 +1,6 @@
-@charset 'utf-8';
-@import url(fonts.css);
+@charset 'Utf-8';
 
-/* html {font-size: 0.625rem;}
-body {font-size: 1.4rem; color: #333;}
- */
+
 /* common */
 #wrap {
     color: #000;
@@ -24,3 +21,8 @@ body {font-size: 1.4rem; color: #333;}
     }
 
 }
+
+
+/* html {font-size: 0.625rem;}
+body {font-size: 1.4rem; color: #333;}
+ */
