--- a/workspaces/mamonde_main/css/scss/style.css
+++ b/workspaces/mamonde_main/css/scss/style.css
@@ -41,6 +41,7 @@ body, ul {
   height: 68px;
   line-height: 68px;
   color: #fff;
+  padding: 0 323px 0 335px;
 }
 #wrap .layout__head .section__inner .layout__header .section__header-menu {
   display: flex;
@@ -56,6 +57,12 @@ body, ul {
 }
 #wrap .layout__head .section__inner .layout__header .section__header-menu .section__gnb--menu {
   display: inline-block;
+}
+#wrap .layout__head .section__inner .layout__header .section__header-menu .section__gnb--menu:nth-child(1) {
+  margin-right: 135px;
+}
+#wrap .layout__head .section__inner .layout__header .section__header-menu .section__gnb--menu:nth-child(2) {
+  margin-right: 139px;
 }
 #wrap .layout__head .section__inner .layout__header .section__header-menu .section__util-wrap {
   display: flex;
