--- a/workspaces/mamonde_main/css/scss/style.scss
+++ b/workspaces/mamonde_main/css/scss/style.scss
@@ -40,6 +40,7 @@ body, ul {
                 height: 68px;
                 line-height: 68px;
                 color: #fff;
+                padding: 0 323px 0 335px;
               .section__header-menu {
                 display: flex;
                 justify-content: space-between;
@@ -54,7 +55,14 @@ body, ul {
                     display: inline-block;
                     &--menu {
                         display: inline-block;
+                        &:nth-child(1) {
+                            margin-right:135px;
+                        }
+                        &:nth-child(2) {
+                            margin-right:139px;
+                        }
                     }
+                    
                 }
                 .section__util-wrap {
                     display: flex;
