--- a/workspaces/mamonde_main/css/scss/style.css
+++ b/workspaces/mamonde_main/css/scss/style.css
@@ -19,7 +19,6 @@ img {
 
 #wrap {
   max-width: 1920px;
-  /* overflow-y: scroll; */
   color: #000;
   margin: 0 auto;
   box-sizing: border-box;
@@ -39,6 +38,7 @@ img {
   font-size: 40px;
   color: #000;
   font-weight: bold;
+  margin-bottom: 25px;
 }
 
 .section__highlight {
@@ -165,6 +165,7 @@ img {
 
 /* layout__body */
 .layout__body {
+  margin-top: 95px;
   /* Skincare Solution */
   /* Mamonde Exclusive */
   /* Brand Story */
