--- a/workspaces/mamonde_main/css/scss/style.css
+++ b/workspaces/mamonde_main/css/scss/style.css
@@ -1,4 +1,12 @@
 /* common */
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1em;
+}
+
 body, ul, h2 {
   margin: 0;
   padding: 0;
@@ -30,15 +38,15 @@ img {
 }
 
 .section__content .section__inner {
-  padding: 0 242px;
+  padding: 0 12.6vw;
 }
 
 .section__title {
   font-family: "Cera Pro", sans-serif;
-  font-size: 40px;
+  font-size: 2.08vw;
   color: #000;
   font-weight: bold;
-  margin-bottom: 25px;
+  margin-bottom: 1.3vw;
 }
 
 .section__highlight {
@@ -46,7 +54,7 @@ img {
 }
 
 .section__main-contents {
-  margin-top: 20px;
+  margin-top: 1.04vw;
 }
 
 /* layout__top */
@@ -65,17 +73,23 @@ img {
   left: 20px;
   transform: translateY(-50%);
 }
+.layout__top .section__inner .icon__arrow--left img {
+  width: 1.3vw;
+}
 .layout__top .section__inner .icon__arrow--right {
   position: absolute;
   top: 50%;
   right: 20px;
   transform: translateY(-50%);
 }
+.layout__top .section__inner .icon__arrow--right img {
+  width: 1.3vw;
+}
 .layout__top .section__inner .section__header {
-  height: 68px;
-  line-height: 68px;
+  height: 3.54vw;
+  line-height: 3.54vw;
   color: #fff;
-  padding: 0 323px 0 335px;
+  padding: 0 16.82vw 0 17.45vw;
 }
 .layout__top .section__inner .section__header .section__header-menu {
   display: flex;
@@ -84,20 +98,21 @@ img {
   font-weight: 600;
 }
 .layout__top .section__inner .section__header .section__header-menu .section__logo img {
-  width: 132px;
+  width: 6.88vw;
   height: auto;
 }
 .layout__top .section__inner .section__header .section__header-menu .section__gnb {
   display: inline-block;
 }
 .layout__top .section__inner .section__header .section__header-menu .section__gnb--menu {
+  font-size: 0.94vw;
   display: inline-block;
 }
 .layout__top .section__inner .section__header .section__header-menu .section__gnb--menu:nth-child(1) {
-  margin-right: 135px;
+  margin-right: 7.03vw;
 }
 .layout__top .section__inner .section__header .section__header-menu .section__gnb--menu:nth-child(2) {
-  margin-right: 139px;
+  margin-right: 7.24vw;
 }
 .layout__top .section__inner .section__header .section__header-menu .section__util-wrap {
   display: flex;
@@ -107,65 +122,67 @@ img {
   display: inline-block;
 }
 .layout__top .section__inner .section__header .section__header-menu .section__util-wrap .section__util--item {
+  font-size: 0.94vw;
   display: inline-block;
 }
 .layout__top .section__inner .section__header .section__header-menu .section__util-wrap .section__util--item:nth-child(1) {
-  margin-right: 38px;
+  margin-right: 1.98vw;
 }
 .layout__top .section__inner .section__header .section__header-menu .section__util-wrap .section__util--item:nth-child(2) {
-  margin-right: 30px;
+  margin-right: 1.56vw;
 }
 .layout__top .section__inner .section__header .section__header-menu .section__util-wrap .icon.icon__tooltip--search {
-  width: 45px;
-  height: 45px;
-  margin-top: 5px;
+  margin-top: 0.26vw;
 }
 .layout__top .section__inner .section__header .section__header-menu .section__util-wrap .icon.icon__tooltip--search img {
-  width: auto;
-  height: auto;
+  width: 1.09vw;
+  height: 1.09vw;
 }
 
 /* main__banner */
-.section__main-banner .section__title {
+.section__main-banner .main__title {
   position: absolute;
   top: 0;
   left: 0;
-  margin-top: 264px;
-  margin-left: 334px;
+  margin-top: 13.75vw;
+  margin-left: 17.4vw;
   left: 0;
   color: #fff;
 }
-.section__main-banner .section__title--b-text {
+.section__main-banner .main__title--b-text {
   display: block;
   font-style: normal;
-  font-size: 45px;
+  font-size: 2.34vw;
   line-height: 1.2;
   font-weight: bold;
-  margin-bottom: 25px;
+  margin-bottom: 1.3vw;
 }
-.section__main-banner .section__title--text {
+.section__main-banner .main__title--text {
   display: block;
-  font-size: 24px;
-  margin-bottom: 63px;
+  font-size: 1.25vw;
+  margin-bottom: 3.28vw;
   font-weight: 600;
 }
-.section__main-banner .section__title--btn-more {
-  font-size: 18px;
+.section__main-banner .main__title--btn-more {
+  font-size: 0.94vw;
   border: 1px solid #fff;
-  padding: 13px 26px;
+  padding: 0.68vw 1.35vw;
   font-weight: 400;
 }
 .section__main-banner .section__rolling-navi {
   position: absolute;
   top: 0;
   left: 0;
-  margin-top: 596px;
-  margin-left: 334px;
+  margin-top: 31.04vw;
+  margin-left: 17.4vw;
+}
+.section__main-banner .section__rolling-navi img {
+  width: 24.48vw;
 }
 
 /* layout__body */
 .layout__body {
-  margin-top: 95px;
+  margin-top: 4.95vw;
   /* Skincare Solution */
   /* Mamonde Exclusive */
   /* Brand Story */
@@ -175,27 +192,27 @@ img {
   padding-right: 0;
 }
 .layout__body .section__content.skincare-solution .section__inner .section__tit-box .section__highlight {
-  width: 224px;
-  height: 40px;
+  width: 11.67vw;
+  height: auto;
 }
 .layout__body .section__content.mamonde-exclusive {
-  margin-top: 150px;
+  margin-top: 7.81vw;
 }
 .layout__body .section__content.mamonde-exclusive .section__inner {
   padding-right: 0;
 }
 .layout__body .section__content.mamonde-exclusive .section__inner .section__tit-box .section__highlight {
-  width: 179px;
-  height: 40px;
+  width: 9.32vw;
+  height: auto;
 }
 .layout__body .section__content.brand-story {
-  margin-top: 130px;
+  margin-top: 6.77vw;
 }
 .layout__body .section__content.with-mamonde {
-  margin-top: 130px;
+  margin-top: 6.77vw;
 }
 
 /* layout__footer */
 .layout__footer {
-  margin-top: 70px;
+  margin-top: 3.65vw;
 }/*# sourceMappingURL=style.css.map */
