--- a/workspaces/mamonde_main/css/scss/style.css
+++ b/workspaces/mamonde_main/css/scss/style.css
@@ -46,7 +46,7 @@ img {
   font-size: 2.08vw;
   color: #000;
   font-weight: bold;
-  margin-bottom: 1.3vw;
+  margin-bottom: 1.4897889863%;
 }
 
 .section__highlight {
@@ -70,7 +70,7 @@ img {
 .layout__top .section__inner .icon__arrow--left {
   position: absolute;
   top: 50%;
-  left: 20px;
+  left: 1.0416666667%;
   transform: translateY(-50%);
 }
 .layout__top .section__inner .icon__arrow--left img {
@@ -79,14 +79,14 @@ img {
 .layout__top .section__inner .icon__arrow--right {
   position: absolute;
   top: 50%;
-  right: 20px;
+  right: 1.0416666667%;
   transform: translateY(-50%);
 }
 .layout__top .section__inner .icon__arrow--right img {
   width: 1.3vw;
 }
 .layout__top .section__inner .section__header {
-  height: 3.54vw;
+  height: 8.4788029925%;
   line-height: 3.54vw;
   color: #fff;
   padding: 0 16.82vw 0 17.45vw;
@@ -97,7 +97,10 @@ img {
   width: 100%;
   font-weight: 600;
 }
-.layout__top .section__inner .section__header .section__header-menu .section__logo img {
+.layout__top .section__inner .section__header .section__header-menu .section__logo a {
+  vertical-align: sub;
+}
+.layout__top .section__inner .section__header .section__header-menu .section__logo a img {
   width: 6.88vw;
   height: auto;
 }
@@ -138,45 +141,51 @@ img {
   width: 1.09vw;
   height: 1.09vw;
 }
-
-/* main__banner */
-.section__main-banner .main__title {
+.layout__top .section__inner .section__main-visual .main__title {
   position: absolute;
   top: 0;
   left: 0;
-  margin-top: 13.75vw;
-  margin-left: 17.4vw;
+  margin-top: 13.75%;
+  margin-left: 17.3958333333%;
   left: 0;
   color: #fff;
 }
-.section__main-banner .main__title--b-text {
+.layout__top .section__inner .section__main-visual .main__title--b-text {
   display: block;
   font-style: normal;
   font-size: 2.34vw;
   line-height: 1.2;
   font-weight: bold;
-  margin-bottom: 1.3vw;
+  margin-bottom: 6.6923653496%;
 }
-.section__main-banner .main__title--text {
+.layout__top .section__inner .section__main-visual .main__title--text {
   display: block;
   font-size: 1.25vw;
-  margin-bottom: 3.28vw;
+  margin-bottom: 16.864760681%;
   font-weight: 600;
 }
-.section__main-banner .main__title--btn-more {
-  font-size: 0.94vw;
-  border: 1px solid #fff;
-  padding: 0.68vw 1.35vw;
-  font-weight: 400;
-}
-.section__main-banner .section__rolling-navi {
+.layout__top .section__inner .section__main-visual .btn__more {
   position: absolute;
   top: 0;
   left: 0;
-  margin-top: 31.04vw;
-  margin-left: 17.4vw;
+  margin-top: 25.3125%;
+  margin-left: 17.4479166667%;
+  border: 1px solid #fff;
+  padding: 0.5208333333% 1.3541666667%;
 }
-.section__main-banner .section__rolling-navi img {
+.layout__top .section__inner .section__main-visual .btn__more--txt {
+  font-size: 0.94vw;
+  font-weight: 400;
+  color: #fff;
+}
+.layout__top .section__inner .section__main-visual .section__rolling-navi {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 31.0416666667%;
+  margin-left: 17.3958333333%;
+}
+.layout__top .section__inner .section__main-visual .section__rolling-navi img {
   width: 24.48vw;
 }
 
